fixed headers showing up on mobile

--- a/project_root/public/css/classic_mode_css/guessed_characters_mobile.css
+++ b/project_root/public/css/classic_mode_css/guessed_characters_mobile.css
@@ -14,7 +14,7 @@
     }
 
     #characterListHeadersContainer {
-        display: flex;
+        display: none;
         flex-direction: row; /* Align headers in a row */
         flex-wrap: nowrap; /* Prevent wrapping */
         gap: 10px; /* Space between headers */
